fix misalignment of nav icons in mobile view

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,6 +1,5 @@
 * {
     font-family: Arial, sans-serif;
-    letter-spacing: 1px;
 }
 
 html {
@@ -17,6 +16,10 @@ body {
     /* flex-direction: column; */
     box-sizing: border-box;
 }
+
+/*
+ * Navigation menu style
+ */
 
 nav {
     float: left;
@@ -64,6 +67,12 @@ nav a:hover {
     color: black;
 }
 
+nav .fa-solid {
+    /* font-size: 24px; */
+    color: white;
+    margin: 0 5% 0 0;
+}
+
 /*
 nav a:nth-child(-n+2) {
     float: left;
@@ -82,11 +91,9 @@ nav > a:nth-last-child(-n+3) {
 }
 */
 
-nav .fa-solid {
-    /* font-size: 24px; */
-    color: white;
-    margin: 0 5% 0 0;
-}
+/*
+ * Main container style
+ */
 
 main {
     text-align: center;
@@ -139,21 +146,20 @@ h2 {
     padding: 16px;
     align-items: center; 
     border-radius: 18px;   
-    box-shadow: 0px 4px 9px #222;
+    box-shadow: 0 4px 9px #222;
 }
 
 section>p {
     font-size: 12px;
-    margin: 0px;
-    padding: 0px;
-    margin: 0px 8px 0px 0px; 
+    padding: 0;
+    margin: 0 8px 0 0;
 }
 
 .song {
     width: 48px;
     height: 48px;
     object-fit: cover;
-    margin: 0px 8px 0px 0px; 
+    margin: 0 8px 0 0;
 }
 
 .music-info {
@@ -174,7 +180,7 @@ section>p {
 
 .post-interaction>a {
     align-self: center;
-    margin: 8px 4px 0px 4px;
+    margin: 8px 4px 0 4px;
 }
 
 .fa-play {
@@ -188,7 +194,7 @@ section>p {
 }
 
 .fa-heart {
-    padding: 0px;
+    padding: 0;
     font-size: 25px;
     color:#E91E63;
 }
